assets/css/style.css
/*Google Fonts external import link*/
@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@600&family=Montserrat:wght@900&family=Raleway:wght@400;900&display=swap');;

/*Resetting browser page defaults*/
*,
*::before,
*::after {
  margin:0;
  padding:0; 
  box-sizing: border-box;
}
html,body {
  margin:0;
  padding:0;
}



/*global styles */

.hero-text {
  font-size: 1rem;
  text-align:center;
  color:white;
}

/* Header styling */

  .flex {
    
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    font-family:'biryani';
    font-size:1rem;
    background-color:#f3dfc1;
}
.skill-share {
  display:flex;
  justify-content: center;
  font-family:'Raleway',sans-serif;
  font-size:2rem;
  margin:0;
}

.skill-share, a {
  text-decoration:none;
  color:#160f29;
}
/*
.skill-share a:link {
  color:#246a73;
}

.skill-share a:visited {
   color:#246a73 ;
}

a:focus {
}

.skill-share a:hover {
  color:#246a73;
}

a:active {
  color:#246a73;
}
*//* e
/*Nav bar*/ 


.flex-column {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    font-size: 1rem;
    overflow:hidden;
    margin:0;
    padding:0;
}
ul.flex-column {
  padding: 0;
  gap:2.5px;
}
.column.menu {
    flex: auto;
    text-align: center;
    margin-top: 0.6rem;
    margin-bottom: 0.6rem;

}
.flex a,
.skill-swap a,
.flex-column a {

    display: block;
    text-decoration: none;
    letter-spacing: 0.1;
    padding: 0;
    margin: 0;
}



.flex-column a:hover{
color: black;
}
/* mouse over link */
.flex-column a:hover {
  color: #72706f;
}

/* selected link *
a:active {
  backgroundb(0, 0, 0);
}  *
*/

.container
{
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
  
}
#hero.container {
  height:500px;
  background-size:contain;
}
  .center-hero {
  display:flex;
  background-image:url("assets/images/woman_stressed_hero_image2.jpeg");
  max-width: 100%;
  background-size: cover;
  background-repeat:no-repeat;

}

.center p {
    padding:2rem;
  }
  
  .hero h2 { 
    padding:5px;
    color:#160f29;
  }
#home-center {
  display:block;
  max-width:80vw;
}

.center {
  text-align:center;
}
.container-text {
  margin-inline:auto;
  width:min(90%, 70rem);
}
.split{
  display:flex;
  flex-direction:column;
}

@media (min-width 40rem) {
  .split {
    flex-direction:row;}    
  }
  .split > * {
    flex-basis: 100%;
}
.split > * + * {
  margin-left: 2rem;
}


.container
{
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
  
}

.card {
    background:bisque;
    width:270px;
    margin-left:15px;
    margin-right: 15px;
    margin-bottom:15px;
    border-radius: 15px;
    text-align: center;
  
  }
  
  .card-image {
    background-color:darksalmon;
    height: 200px;
    margin-bottom:15px;
    border-radius: 15px 15px 0 0;
    background-size: contain;
    background-repeat:no-repeat;
    background-position: center;
  
  }
  .card-bg1 {
    background-image: url("assets/images/mentor.png");
  }
  
  .card-bg2{
    background-image: url("assets/images/friends.png");
  }
  
  .card-bg3 {
    background-image: url("assets/images/events.png");
  }
  
  .card p {
    padding:5px;
  }
  
  .card h3 { 
    padding:5px;
  }


  #hero {
    background-image:url("/assets/images/woman_stressed_hero_image1.jpeg");
    max-width:100%;
    background-size: contain;
    background-repeat:no-repeat;
    background-position: center;
  
  }

  .hero p {
      padding:2rem;
    }
    
    .hero h2 { 
      padding:5px;
    }

.flex-row-container {
  display:flex;
  flex-wrap:wrap;
  width:100%;
}
  
.flex-row {
  flex: 25%;
}

/* Contact form */
.form-container {
  display:flex;
  flex-wrap:wrap;
  max-width:80vw;
  text-align:center;
  justify-content: center;
  background-size:contain;
  overflow:none;
}

input#name,input#surname,input#email,input#phone,
input#message {
  margin-bottom:15px;
  width:50%;

}

section, form
textarea {
  resize: none;
}

